--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,12 +86,17 @@ let frontalFix = true;              // nach Laden: noch nicht frontal
 let hmNeigen = false, hmStartTime = 0;
 let rising   = false, riseStartTime = 0;
 
+// ⭐ FEHLEND – WICHTIG!  → steuert die Rückkehr nach rechts
+let toIdlePose = false, toIdleStart = 0;
+const toIdleDuration = 2000;    // SANFTE Rückkehr (du kannst 3000 nehmen!)
+
+
 // === Animationszeiten (ms) ===
 const hmDuration   = 10000;         // "Hmmm..." sehr langsam
 const riseDuration = 1200;          // Begrüßung / Antwort → frontal
 
 // === Grund-Position Avatar ===
-let baseRotY = -0.35;               // Start leicht nach rechts geneigt
+let baseRotY = -0.35;  // leicht nach rechts geneigt
 let baseRotX = 0.25;
 let baseY = 0;
 
@@ -100,8 +105,8 @@ function resetMovements() {
   hmNeigen = false;
   rising   = false;
   talking  = false;
+  // ❗ toIdlePose hier NICHT löschen!
 }
-
 /* -----------------------------
    THREE.js SETUP
 ----------------------------- */
@@ -156,18 +161,18 @@ loader.load("./avatar.glb", gltf => {
   animate();
 });
 /* -----------------------------------
-   ANIMATE – FINAL STABLE VERSION
+   ANIMATE – FINAL & STABLE
 ----------------------------------- */
 function animate() {
   requestAnimationFrame(animate);
   if (!model) return;
 
   const now = performance.now();
-  const frontalY = -Math.PI / 2;
-  const rightY   = baseRotY - Math.PI / 2;
-  const leftY    = frontalY + 0.25;
+  const frontalY = -Math.PI / 2;               // frontal
+  const rightY   = baseRotY - Math.PI / 2;     // Startpose rechts
+  const leftY    = frontalY + 0.25;            // Hmmm = leicht links
 
-  // 0️⃣ START: leichte Neigung rechts
+  // 0️⃣ START: Ausgangsposition (leicht rechts)
   if (frontalFix) {
     model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, rightY, 0.08);
     model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.08);
@@ -175,7 +180,7 @@ function animate() {
     return;
   }
 
-  // 1️⃣ GREET / BEGINN DER ANTWORT → FRONTAL
+  // 1️⃣ GREET / ANTWORTBEGINN → FRONTAL!
   if (rising) {
     const t = (now - riseStartTime) / riseDuration;
     model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.06);
@@ -183,28 +188,35 @@ function animate() {
     if (t >= 1) rising = false;
   }
 
-  // 2️⃣ HMMM → LANGSAM LINKS (hmDuration gültig!)
+  // 2️⃣ HMMM → LANGSAM LINKS
   else if (hmNeigen) {
     const t = Math.min(1, (now - hmStartTime) / hmDuration);
     model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX + 0.25, t);
     model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, leftY, t);
   }
 
-  // 3️⃣ TALKING → FRONTAL & ATMUNG
+  // 3️⃣ ***NEU*** → ANTWORT LÄUFT → FRONTAL!
+  else if (STATE === "answer") {
+    model.position.y = baseY + Math.sin(now * 0.0015) * 0.008;
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.03);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
+  }
+
+  // 4️⃣ TALKING = WÄHREND SPRECHEN → FRONTAL & ATMEN
   else if (talking) {
     model.position.y = baseY + Math.sin(now * 0.0015) * 0.008;
     model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.03);
     model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
   }
 
-  // 4️⃣ WARTEN AUF FRAGE → FRONTAL
-  else if (STATE === "listen" || STATE === "greet" || STATE === "answer") {
+  // 5️⃣ FRAGE WARTEZEIT (= listen) → FRONTAL
+  else if (STATE === "listen" || STATE === "greet") {
     model.position.y = baseY + Math.sin(now * 0.0012) * 0.006;
     model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.03);
     model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
   }
 
-  // 5️⃣ WIRKLICHES ENDE → JETZT erst ZURÜCK NACH RECHTS!
+  // 6️⃣ WIRKLICHES ENDE → ZURÜCK NACH RECHTS
   else if (STATE === "idle" && !talking && !rising) {
     model.position.y = baseY + Math.sin(now * 0.0012) * 0.006;
     model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, rightY, 0.03);
@@ -213,98 +225,71 @@ function animate() {
 
   renderer.render(scene, camera);
 }
-/* -----------------------------
-   STATE MACHINE – LOGIK
------------------------------ */
+/* -----------------------------------
+   ANIMATE – FINAL & STABLE
+----------------------------------- */
+function animate() {
+  requestAnimationFrame(animate);
+  if (!model) return;
 
-let recognition;
-if ("webkitSpeechRecognition" in window) {
-  recognition = new webkitSpeechRecognition();
-  recognition.lang = "de-DE";
-  recognition.continuous = false;
+  const now = performance.now();
+  const frontalY = -Math.PI / 2;               // frontal
+  const rightY   = baseRotY - Math.PI / 2;     // Startpose rechts
+  const leftY    = frontalY + 0.25;            // Hmmm = leicht links
 
-  recognition.onresult = e => {
-    lastTranscript = e.results[0][0].transcript;
-  };
+  // 0️⃣ START: Ausgangsposition (leicht rechts)
+  if (frontalFix) {
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, rightY, 0.08);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.08);
+    renderer.render(scene, camera);
+    return;
+  }
 
-  recognition.onend = () => {
-    if (STATE === "listen" && lastTranscript) {
+  // 1️⃣ GREET / ANTWORTBEGINN → FRONTAL!
+  if (rising) {
+    const t = (now - riseStartTime) / riseDuration;
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.06);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.06);
+    if (t >= 1) rising = false;
+  }
 
-      // 2️⃣ HMMM-PHASE → Kopf langsam nach links
-      resetMovements();
-      STATE = "hmmm";
-      hmNeigen = true;
-      hmStartTime = performance.now();
-      speak("Hmmmm... einen Moment", true);
+  // 2️⃣ HMMM → LANGSAM LINKS
+  else if (hmNeigen) {
+    const t = Math.min(1, (now - hmStartTime) / hmDuration);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX + 0.25, t);
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, leftY, t);
+  }
 
-      fetch("/ask", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ text: lastTranscript })
-      })
-        .then(r => r.json())
-        .then(data => {
+  // 3️⃣ ***NEU*** → ANTWORT LÄUFT → FRONTAL!
+  else if (STATE === "answer") {
+    model.position.y = baseY + Math.sin(now * 0.0015) * 0.008;
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.03);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
+  }
 
-          // 3️⃣ ANTWORT BEGINNT → zurück auf frontal
-          resetMovements();
-          STATE = "answer";
-          frontalFix = false;           // sicherstellen, dass Bewegung erlaubt ist
-          rising = true;
-          riseStartTime = performance.now();
-          speak(data.answer);
+  // 4️⃣ TALKING = WÄHREND SPRECHEN → FRONTAL & ATMEN
+  else if (talking) {
+    model.position.y = baseY + Math.sin(now * 0.0015) * 0.008;
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.03);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
+  }
 
-          // nach der Antwort → in echtes Idle (zurück nach rechts)
-          setTimeout(() => {
-            resetMovements();
-            greeted = false;            // wichtig: damit Idle = Ausgangsposition ist
-            STATE = "idle";
-          }, 500);
-        })
-        .catch(() => {
-          resetMovements();
-          STATE = "idle";
-        });
+  // 5️⃣ FRAGE WARTEZEIT (= listen) → FRONTAL
+  else if (STATE === "listen" || STATE === "greet") {
+    model.position.y = baseY + Math.sin(now * 0.0012) * 0.006;
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, frontalY, 0.03);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, 0, 0.03);
+  }
 
-    } else {
-      resetMovements();
-      STATE = "idle";
-    }
-  };
+  // 6️⃣ WIRKLICHES ENDE → ZURÜCK NACH RECHTS
+  else if (STATE === "idle" && !talking && !rising) {
+    model.position.y = baseY + Math.sin(now * 0.0012) * 0.006;
+    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, rightY, 0.03);
+    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.03);
+  }
+
+  renderer.render(scene, camera);
 }
-
-
-/* -----------------------------
-   BUTTON – GREET & LISTEN
------------------------------ */
-document.getElementById("micBtn").onclick = () => {
-  // Erste Betätigung → Begrüßung
-  if (!greeted) {
-    resetMovements();
-    greeted = true;
-    STATE = "greet";
-
-    frontalFix = false;               // ab jetzt darf er frontal werden
-    rising = true;
-    riseStartTime = performance.now();
-
-    speak(
-      "Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg erwacht. Was ist Euer Begehr?",
-      false
-    );
-    return;
-  }
-
-  // Spätere Betätigung → Spracherkennung starten
-  if (!recognition) {
-    alert("Spracherkennung wird nicht unterstützt.");
-    return;
-  }
-
-  resetMovements();
-  lastTranscript = "";
-  STATE = "listen";
-  recognition.start();
-};
 /* -----------------------------
    MÄNNLICHE STIMME SUCHEN
 ----------------------------- */
